# Exercicio_C14

./: .gitignore  README.md  pyproject.toml
src/exercicio_c14/: main.py
tests/: test_main.py
