[project]
name = "exercicio-c14"
version = "0.1.0"
description = ""
authors = [
    {name = "Andre",email = "andreaugusto@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.3.2,<3.0.0)"
]

[tool.poetry]
packages = [{include = "exercicio_c14", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
